modules/module_8/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-server-demo
  namespace: cloudnative
spec:
  tls:
    - hosts:
        - cloudnative
      secretName: cloudnative
  rules:
    - http:
        paths:
          - path: /dev
            pathType: Prefix
            backend:
              service:
                name: http-server-demo-dev
                port:
                  number: 80
          - path: /prod
            pathType: Prefix
            backend:
              service:
                name: http-server-demo-prod
                port:
                  number: 80
